--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-persist": "5.6.9",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
